--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git website</title>
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta deserunt iure quasi! Et vero sint dolores nesciunt ex, eos consectetur ab consequatur doloremque quo?</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non.</p>
 </body>
 </html>
